--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "main": "./dist/react-iscroll-infinite.js",
   "devDependencies": {
+    "ajax-request": "^1.2.1",
     "autoprefixer": "^6.4.0",
     "autoprefixer-loader": "^3.2.0",
     "babel": "^6.5.2",
@@ -55,6 +56,7 @@
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
     "lolex": "^1.4.0",
+    "n-zepto": "^1.2.0",
     "node-sass": "^3.13.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
